Small copy edits

--- a/discussion.tex
+++ b/discussion.tex
@@ -6,11 +6,11 @@ In this section, I ask whether digital language development is necessary; discus
 
 \subsection{Is digital presence necessary?}
 
-In Section~\ref{subsubsec:response}, I pointed out how metrics of language endangerment come from a perspective that languages may need to be saved, and that external onlookers should be allowed to judge the status of languages they do not themselves speak, for communities they may not be intimately involved in. This viewpoint may not be reflective of the views of language speakers, themselves. It is not a view I feel comfortable with; as a researcher, that I was not able to evidentially contribute to Naskapi or Gaelic research while writing this paper except with a literature review and my own suggestions for best practices is unsettling. 
+In Section~\ref{subsubsec:response}, I pointed out how metrics of language endangerment come from a perspective that languages may need to be saved, and that external onlookers should be allowed to judge the status of languages they do not themselves speak, for communities they may not be intimately involved in. This viewpoint may not be reflective of the views of language speakers, themselves. It is not a view I feel comfortable with; as a researcher, that I was not able to evidentially contribute to Naskapi or Gaelic research while writing this paper except with a literature review and my own suggestions for best practices is unsettling.
 
-One of the more interesting discoveries in this paper was that Gaelic was recorded by UNESCO as Definitely endangered, while Naskapi was marked as Vulnerable - a safer rating. This is interesting, as Gaelic has roughly sixty times the speaking population of Naskapi. However, it reflects the strength of the Naskapi community; almost all of the members of the community speak Naskapi, and it is used in all domains of life. However, this is happening without having technical tools like spell-checkers, wikipedias, or STT systems. 
+One of the more interesting discoveries in this paper was that Gaelic was recorded by UNESCO as Definitely endangered, while Naskapi was marked as Vulnerable - a safer rating. This is interesting, as Gaelic has roughly sixty times the speaking population of Naskapi. However, it reflects the strength of the Naskapi community; almost all of the members of the community speak Naskapi, and it is used in all domains of life. However, this is happening without having technical tools like spell-checkers, wikipedias, or STT systems.
 
-My questions regarding open source to the linguists working on the dictionary seemed vaguely off the mark. Open source, as a methodology, is useful in particular circumstances - namely, when there is a large suite of computational tools which can be used to improve the livelihood of speakers. This clearly would happen in large, Western industrialised places such as Scotland, if there are speakers who are more proficient in Gaelic than English. However, it is less clear whether open source - or much more technological advancement - would benefit the Naskapi community as much as the work currently ongoing there. Of course, it would be ideal if they were able to type with syllabics on a daily basis, and to read syllabics in all types of literature. But digital development may not be necessary to keep the language alive, at this stage. 
+My questions regarding open source to the linguists working on the dictionary seemed vaguely off the mark. Open source, as a methodology, is useful in particular circumstances - namely, when there is a large suite of computational tools which can be used to improve the livelihood of speakers. This clearly would happen in large, Western industrialised places such as Scotland, if there are speakers who are more proficient in Gaelic than English. However, it is less clear whether open source - or much more technological advancement - would benefit the Naskapi community as much as the work currently ongoing there. Of course, it would be ideal if they were able to type with syllabics on a daily basis, and to read syllabics in all types of literature. But digital development may not be necessary to keep the language alive, at this stage.
 
 The Naskapi are currently going through a metamorphic stage, still changing from their nomadic roots half a century ago and turning into a technology-dependent society. A new, fibre-optic cable internet connection is being laid this year from the coast; what lies ahead is uncertain.
 
@@ -23,7 +23,7 @@ For one, the overwhelming majority of open source coders on online communities a
 
 The incentives around open source contributions are also changeable, and while paid workers are more likely to contribute in the long run, users who contribute to code because of the value of the code to them are less likely to stay in the community for long periods of time \citep{roberts2006understanding, shah2006motivation}. Ultimately, it is hobbyists who end up working on code the longest, after the initial value to them has worn off \citep{shah2006motivation}. This has implications for low resource languages; is open source the best vehicle for developing language software, which may have long runways? On another note, is it ethical to implement a system where there is high burnout rate for developers who need it, when it may make more sense to find ways to fund direct work for a small core of dedicated developers?
 
-To make this issue clearer, consider the position of a linguist encouraging language activists to build a localised wikipedia. Encouraging wikipedia contributions amounts to encouraging users to invest time which they may not be in an economically advantaged position to spend, as speakers of low resource languages are overwhelmingly not Western, educated, industrialised, rich, or from democratic countries - the WEIRD group described in \citet{henrich2010most}. Further, the system tends towards high initial attrition rates and with diminishing returns for the main investors. Whether encouraging someone to enter such a process is an ethical choice is left up to the reader; I certainly don't have an answer.
+To make this issue clearer, consider the position of a linguist encouraging language activists to build a localised wikipedia. Encouraging wikipedia contributions amounts to encouraging users to invest time which they may not be in an economically advantaged position to spend, as speakers of low resource languages are overwhelmingly not Western, educated, industrialised, rich, or from democratic countries - the WEIRD group described in \citet{henrich2010most}. Further, the system tends towards high initial attrition rates and with diminishing returns for the main investors. Whether encouraging someone to enter such a process is an ethical choice is left up to the reader; I certainly do not have an answer.
 
 These are a couple of small examples of where advocating open source is not a clearcut issue. This paper is not meant to provide a solid overview of all ethical issues; however, at least some of them are worth noting here as caveats. For low resource languages, open source coding presents a clear opportunity for allowing communities to work together, cross-linguistically and between stakeholders, with a minimum of friction caused by proprietary licensing. It is my opinion that any work which can be expedited or made redundant may be useful in a field where languages are dying at exorbitant rates.
 
