--- a/methods.tex
+++ b/methods.tex
@@ -2,7 +2,7 @@
 \section{Methods}
 \label{sec:methods}
 
-It is customary when doing a quantitative review to give advice around best practices, to make not just the next researcher's job easier, but also to help lift the quality of the state of the field, in general. In research I've been involved in, this has been a common practice: \citet{DBLP:journals/corr/KatzCWHVHSJCCVL15}, which came out of a workshop on sustainable software in the sciences, does a reasonable job of doing this for software citation; \citet{LittIDCC} for scientific workflows; \citet{LittEdulearn} for crowdsourcing learning materials by students in the classroom; and \citet{wiggins2013data} for public participation in science. Here, in the same vein, are some recommendations for utilising open source for LRL NLP.
+It is customary when doing a quantitative review to give advice around best practices, to make not just the next researcher's job easier, but also to help lift the quality of the state of the field, in general. In research I have been involved in, this has been a common practice: \citet{DBLP:journals/corr/KatzCWHVHSJCCVL15}, which came out of a workshop on sustainable software in the sciences, does a reasonable job of doing this for software citation; \citet{LittIDCC} for scientific workflows; \citet{LittEdulearn} for crowdsourcing learning materials by students in the classroom; and \citet{wiggins2013data} for public participation in science. Here, in the same vein, are some recommendations for utilising open source for LRL NLP.
 
 \subsection{Choosing a license}
 \label{choosing-a-license}
