--- a/resources.tex
+++ b/resources.tex
@@ -75,7 +75,7 @@ There are other resources: the CLARIN Virtual Language Observatory,\footnote{\hr
 
 The use of the word `kit' is informative, as there is  pre\"{e}xisting literature on this topic regarding the BLARK, or Basic Language Resource Kit. BLARK was developed by a joint initiative between the European Network of Excellence in Language and Speech (ELSNET), a European international umbrella for 145 different organisations in 29 countries, and the European Language Resources Association (ELRA), and first outlined in \citet{krauwer1998elsnet}. The BLARK is defined as the "minimal set of language reosources that is necessary to do any precompetitive research and education at all." \citep[4]{krauwer2003basic} In general, this comprises "written language corpora, spoken language corpora, mono- and bilingual dictionaries, terminology collections, grammars, modules (e.g. taggers, morphological analysers, parsers, speech recognisers, text-to-speech), annotation standards and tools, corpus exploration and exploitation tools, bilingual corpora, etc."
 
-\citet{krauwer2003basic} has a comprehensive matrix in the appendix outlining technology that would be needed to provide a BLARK for Dutch, as outlined in a workshop documented in \citet{binnenpoorte2002towards}. In another paper, \citet{maegaard2006blark} under NEMLAR (Network  for  Euro-Mediterranean  LAnguage  Resources) outlined the specific language resource needs for Arabic in a BLARK table, noting the importance of certain modules for better language coverage. Both of the BLARK grids for Arabic provided in that paper are included here, in Figures~\ref{fig:blark1} and \ref{fig:blark2}, as they very usefully show not only the state of HLT resources for Arabic at the time, but also the categories thought sufficient. They also point out how both written and spoken language tools need to be developed, and can't be considered in isolation. Their categories - `prosody prediction', `alignment', `shallow parsing', and so on - are all terms which refer to a suite of resources that each reflect hundreds of papers from within the computational linguistics community, which Section~\ref{sec:resources-code} briefly explicated.
+\citet{krauwer2003basic} has a comprehensive matrix in the appendix outlining technology that would be needed to provide a BLARK for Dutch, as outlined in a workshop documented in \citet{binnenpoorte2002towards}. In another paper, \citet{maegaard2006blark} under NEMLAR (Network  for  Euro-Mediterranean  LAnguage  Resources) outlined the specific language resource needs for Arabic in a BLARK table, noting the importance of certain modules for better language coverage. Both of the BLARK grids for Arabic provided in that paper are included here, in Figures~\ref{fig:blark1} and \ref{fig:blark2}, as they very usefully show not only the state of HLT resources for Arabic at the time, but also the categories thought sufficient. They also point out how both written and spoken language tools need to be developed, and cannot be considered in isolation. Their categories - `prosody prediction', `alignment', `shallow parsing', and so on - are all terms which refer to a suite of resources that each reflect hundreds of papers from within the computational linguistics community, which Section~\ref{sec:resources-code} briefly explicated.
 
 \begin{figure}
  \centering
@@ -112,7 +112,7 @@ But this effort, in some sense, has expanded into LRE (Language Resources and Ev
 
 Several authors working on LRE maps are also authors of the \citet{soria2017digital} paper; extending the LRE maps for low resource languages, and then intensifying efforts to develop low-hanging fruit for low resource languages is a logical next step for this research. The focus on European languages is expected; this may stem from the fact that LREC, the main conference series from which LRE data was drawn, is run by the European Language Research Association (ELRA). This fragmentation of the field is unsurprising, and happens in the reverse, as well: for example, \citet{paricio2010new} cites a framework for upgrading low resource languages which is explained in a research paper written in Spanish, and, anecdotally, around half of the papers presented at the Ryukyuan Heritage Language Society's conference in Tokyo in 2012 (which I attended) were presented in Japanese. This is not to say that fragmentation and diversity of linguistics in academia is something to be avoided, but rather that it is a hurdle to be noted and worked with to avoid repeated work and splintered efforts.
 
-% Note: Made redundant by other examples in the text. I don't think this is needed.
+% Note: Made redundant by other examples in the text. I do not think this is needed.
 %\subsection{The current state of language diversity}
 %In this section, I am going to briefly go into detail about what diversity means for linguistics. This will be useful later for explaining how related languages can be used to bootstrap work in similar languages. For instance, Irish spell-checkers and constitutional corpora from the EU can be used by Scottish Gaelic speakers with some tweaks in order to further improve their own systems.
 
@@ -127,9 +127,9 @@ Meanwhile, many experts in NLP would not consider themselves computational lingu
 
 Another hurdle which was briefly alluded to earlier was the plethora of large organisations, databases, or projects dedicated to cataloguing low resource languages. Each of these has differences in scope, funding, and incentives. However, large organisations are not the only groups working on language development, digital ascent, language revitalisation, or any other shared focus that relates to low resource languages.
 
-As \citet{hammarstrom2015unesco} points out, "language documentation and description is an extremely decentralized activity, carried out by missionaries, anthropologists, travellers, naturalists, amateurs, colonial officials, ethnographers and not least linguists over several hundred years." Language communities, amateur and professional linguists, educators, and language policy setters are most often involved in standardising a language and helping to document and revitalise low resource languages. Digitally, amateur computational linguists and coders who are first-language speakers of their respective LRLs are often the first to work on translating or migrating resources; this group is also often the first to set up wikipedias in a local language (although this often leads to enthusiastic loners working outside of the main language communities \citep{soria2017digital}). These researchers don't necessarily work only on their own languages; for instance, the {\it Indigenous Languages and Technology} email listserv\footnote{\href{http://www.u.arizona.edu/~cashcash/ILAT.html}{http://www.u.arizona.edu/~cashcash/ILAT.html}. \last{May~3}} connects hundreds of different people interested in this area of research, without focusing on a single language.
+As \citet{hammarstrom2015unesco} points out, "language documentation and description is an extremely decentralized activity, carried out by missionaries, anthropologists, travellers, naturalists, amateurs, colonial officials, ethnographers and not least linguists over several hundred years." Language communities, amateur and professional linguists, educators, and language policy setters are most often involved in standardising a language and helping to document and revitalise low resource languages. Digitally, amateur computational linguists and coders who are first-language speakers of their respective LRLs are often the first to work on translating or migrating resources; this group is also often the first to set up wikipedias in a local language (although this often leads to enthusiastic loners working outside of the main language communities \citep{soria2017digital}). These researchers do not necessarily work only on their own languages; for instance, the {\it Indigenous Languages and Technology} email listserv\footnote{\href{http://www.u.arizona.edu/~cashcash/ILAT.html}{http://www.u.arizona.edu/~cashcash/ILAT.html}. \last{May~3}} connects hundreds of different people interested in this area of research, without focusing on a single language.
 
-Beyond these groups, universities and local governments can also often develop language resources for low resource languages, as was the case with \citet{rognvaldsson2009icelandic} and with First Voices, a Canadian First Nations archiving platform.\footnote{\href{https://fv.nuxeocloud.com/}{https://fv.nuxeocloud.com/}. \last{May~3}} Non-profits are also common in the language resource development space; examples include the Endangered Language Alliance,\footnote{\href{http://elalliance.org/}{http://elalliance.org/}. \last{May~3}} Terralingua,\footnote{\href{http://terralingua.org/}{http://terralingua.org/}. \last{May~3}} the Foundation for Endangered Languages,\footnote{\href{http://www.ogmios.org/index.php}{http://www.ogmios.org/index.php}. \last{May~3}}, the Living Tongues Institute for Endangered Languages,\footnote{\href{https://livingtongues.org/}{https://livingtongues.org/}. \last{May~3}} and so on.
+Beyond these groups, universities and local governments can also often develop language resources for low resource languages, as was the case with \citet{rognvaldsson2009icelandic} and with First Voices, a Canadian First Nations archiving platform.\footnote{\href{https://fv.nuxeocloud.com/}{https://fv.nuxeocloud.com/}. \last{May~3}} Non-profits are also common in the language resource development space; examples include the Endangered Language Alliance,\footnote{\href{http://elalliance.org/}{http://elalliance.org/}. \last{May~3}} Terralingua,\footnote{\href{http://terralingua.org/}{http://terralingua.org/}. \last{May~3}} the Foundation for Endangered Languages,\footnote{\href{http://www.ogmios.org/index.php}{http://www.ogmios.org/index.php}. \last{May~3}} the Living Tongues Institute for Endangered Languages,\footnote{\href{https://livingtongues.org/}{https://livingtongues.org/}. \last{May~3}} and so on.
 
 After these groups, large grant-driven institutions such as CLARIN or the NSF fund a large portion of language development, along with industry giants such as Google or Xerox, and large military research arms such as DARPA. Sometimes grants come from philanthropic organisations, like the Bill and Melinda Gates foundation \citep{penfield2006technology}, or philanthropic arms of enterprises, such as Rosetta Stone's work on some indigenous North American languages.\footnote{\href{https://www.rosettastone.com/endangered/projects}{https://www.rosettastone.com/endangered/projects}. \last{May~3}}
 
@@ -145,7 +145,7 @@ Or:
 Were it not for the special attention DARPA, one of the main sponsors of machine translation, devoted to Haitian Creole, it is dubious we would have any MT aimed at this language. There is no reason whatsoever to suppose the Haitian government would have, or even could have, sponsored a similar effort \citep{spice}. \citep[9]{kornai2013digital}
 \end{quote}
 
-The attentions of DARPA and IARPA (Intelligence Advanced Research Proj\-ects Activity, a US institution modelled after DARPA but focusing on national security and not military concerns) on low resource languages is clear, and these are only two branches of the US military-industrial complex. The Low Resource Languages for Emergent Incidents (LORELEI),\footnote{\href{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}. \last{May~3}} Machine Translation for English Retrieval of Information in Any Language (MATERIAL)\footnote{\href{https://www.iarpa.gov/index.php/research-programs/material}{https://www.iarpa.gov/index.php/research-programs/material}. \last{May~3}} and Babel\footnote{\href{https://www.iarpa.gov/index.php/research-programs/babel}{https://www.iarpa.gov/index.php/research-programs/babel}. \last{May~3}} projects explicitly mention `low resource languages` as research areas. The budget for these projects is not public, but can be safely assumed to be in the tens of millions of dollars.\footnote{\href{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}. \last{May~3}} As well, the general public can't know how these tools and projects are then utilised, and whether it is in the best interest of speakers of low resource languages. It is safe to assume that, unless the speakers are US citizens or allies, they are not, as the American military's stated goal is to ensure security for its own nationals. This means that any work done by these bodies, and by researchers connected to them, can be seen as controversial.
+The attentions of DARPA and IARPA (Intelligence Advanced Research Proj\-ects Activity, a US institution modelled after DARPA but focusing on national security and not military concerns) on low resource languages is clear, and these are only two branches of the US military-industrial complex. The Low Resource Languages for Emergent Incidents (LORELEI),\footnote{\href{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}{https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents}. \last{May~3}} Machine Translation for English Retrieval of Information in Any Language (MATERIAL)\footnote{\href{https://www.iarpa.gov/index.php/research-programs/material}{https://www.iarpa.gov/index.php/research-programs/material}. \last{May~3}} and Babel\footnote{\href{https://www.iarpa.gov/index.php/research-programs/babel}{https://www.iarpa.gov/index.php/research-programs/babel}. \last{May~3}} projects explicitly mention `low resource languages` as research areas. The budget for these projects is not public, but can be safely assumed to be in the tens of millions of dollars.\footnote{\href{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}{https://www.popularmechanics.com/technology/security/a17451/iarpa-americas-secret-spy-lab/}. \last{May~3}} As well, the general public cannot know how these tools and projects are then utilised, and whether it is in the best interest of speakers of low resource languages. It is safe to assume that, unless the speakers are US citizens or allies, they are not, as the American military's stated goal is to ensure security for its own nationals. This means that any work done by these bodies, and by researchers connected to them, can be seen as controversial.
 
 Another good example of where funding and incentives for language development can be controversial would be Ethnologue, which rate limits and has a paywall guarding usage of their database, even though they are widely recognised as one of the best informed databases for language data. This paywall can be triggered by viewing a non-trivial amount of pages (around five) for languages on the site. While this is philosophically no different than asking researchers to buy \citet{lewis2009ethnologue}, this data is the most widely used, and this paywall was only implemented in late 2015.\footnote{\href{https://www.ethnologue.com/ethnoblog/m-paul-lewis/ethnologue-launches-subscription-service\#.VmA0hspth0o}{https://www.ethnologue.com/ethnoblog/m-paul-lewis/ethnologue-launches-subscription-service\#.VmA0hspth0o}. \last{May~3}}
 
