Double spacing. Because.

--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,8 @@
 \pagenumbering{roman}
 \setcounter{page}{2}
 
+\doublespacing
+
 \include{abstract}
 \include{declaration}
 \include{acknowledgements}
@@ -31,8 +33,6 @@
 \hypersetup{pageanchor=true}
 \pagenumbering{arabic}
 \setcounter{page}{1}
-
-\onehalfspacing
 
 \include{introduction}
 \include{low-resource-languages}
