Add Kornai, Good, and Henderson to acknowledgements

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,7 +1,7 @@
 \newpage
 \noindent\subsection*{Acknowledgements}
 
-This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX, used in this paper. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; Matthew Bauer, Graham Leary and Francesca Shaw for discussions on Gaelic; Oksana Choulik, Alice Reed, and Caitlin, Matthew and Hazel Windsor, for many conversations in Schefferville and Kawawachikamach; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
+This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX, used in this paper. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Andr\'{a}s Kornai, Robert Henderson and Jeff Good for their advice; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; Matthew Bauer, Graham Leary and Francesca Shaw for discussions on Gaelic; Oksana Choulik, Alice Reed, and Caitlin, Matthew and Hazel Windsor, for many conversations in Schefferville and Kawawachikamach; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
 
 This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
 
