--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,9 +1,11 @@
 \newpage
 \noindent\subsection*{Acknowledgements}
 
-This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX, used in this paper. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Andr\'{a}s Kornai, Robert Henderson and Jeff Good for their advice; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; Matthew Bauer, Graham Leary and Francesca Shaw for discussions on Gaelic; Oksana Choulik, Alice Reed, and Caitlin, Matthew and Hazel Windsor, for many conversations in Schefferville and Kawawachikamach; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
+This thesis is based loosely on a paper presented at the LREC CCURL Workshop in July 2016 in Slovenia \citep{CCURL}. Hugh Paterson III was a coauthor on that paper. Jonathan Poitz provided formatting files for \LaTeX, used in this paper. Fritz Van Deventer helped by suggesting nicer fonts. Many, many academics have helped advise me along the way towards this work: Bobbye Pernice, Stefan Thater, Ivana Kruijff-Korbayov\'a and Hans Uszkoreit with their administrative assistance; Mike Rosner and Ray Fabri with a previous iteration on Maltese morphological parsing, which encouraged my interest in low resource languages; Christine Schreyer with discussions about constructed languages as low resource languages; Hugh Paterson III for many discussions on how to best improve the low-resource-languages list; Andr\'{a}s Kornai, Judit Acs, and Gary Simons for their generous help; Robert Henderson, Mark Finlayson, Jeff Good, Aiden Pine, Patrick Littell, and Julien Malard for their advice and conversations; Tyler Schnoebelen, Schuyler Erle, Robert Munro, and others from Idibon who advised on one iteration of this thesis; Matthew Bauer, Graham Leary and Francesca Shaw for discussions on Gaelic; Oksana Choulik, Alice Reed, and Caitlin, Matthew and Hazel Windsor, for many conversations in Schefferville and Kawawachikamach; the ILAT and GitHub communities for their help; David Leon and John Schroeder for their constant motivation; and finally, Alexis Palmer and Dietrich Klakow, who patiently advised me for years.
 
 This work also draws heavily on an open source repository on GitHub, for which Gina Chiodo, Hugh Paterson III, Liling Tan, Ryan Txanson, Robert Forkel, Aidan Pine, Nick Heindl, Kevin Scannell, Sjur Moshagen, Waldir Pimenta, Joshua Olson, Edwin Ko, Arne Neumann, and Pablo Duboue are all contributors (in order of contributions) as of today, as well as the bots ReadmeCritic, greenkeeper (run by my friend, Gregor Martynus), and orthographic-pedant (run by Travis Hoppe).
+
+This work also has been helped by countless other people, friends, and family, some of whose names I have doubtless failed to include here. For that I apologise. 
 
 Writing this paper involved using LaTeX\footnote{\href{https://www.latex-project.org/}{https://www.latex-project.org/}. \last{May~1}} typeset with TeXShop\footnote{\href{http://pages.uoregon.edu/koch/texshop/}{http://pages.uoregon.edu/koch/texshop/}. \last{May~1}};
 {\tt checkcites}\footnote{\href{https://www.ctan.org/pkg/checkcites}{https://www.ctan.org/pkg/checkcites}. \last{May~3}} and {\tt apalike-refs}\footnote{\href{https://github.com/matthieu-vergne/LaTeX}{https://github.com/matthieu-vergne/LaTeX}. \last{May~3}}; Atom\footnote{\href{https://atom.io/}{https://atom.io/}. \last{May~1}}; iTerm\footnote{\href{https://iterm2.com/}{https://iterm2.com/}. \last{May~1}}; Firefox\footnote{\href{https://www.mozilla.org/en-US/firefox/}{https://www.mozilla.org/en-US/firefox/}. \last{May~1}}; Bash\footnote{\href{https://www.gnu.org/software/bash/}{https://www.gnu.org/software/bash/}. \last{May~1}}; and Mac OSX 10.13\footnote{\href{https://www.apple.com/macos/high-sierra/}{https://www.apple.com/macos/high-sierra/}. \last{May~1}}; among a suite of other closed and open source tools. I used TravisCI\footnote{\href{https://travis-ci.org}{https://travis-ci.org}. \last{May~2}} to ensure link validity, and stored all of the code and files for this thesis on GitHub.\footnote{\href{https://github.com/RichardLitt/thesis}{https://github.com/RichardLitt/thesis}. Last accessed \today.}
