Add note on Lassi being portable

--- a/floss.tex
+++ b/floss.tex
@@ -130,6 +130,6 @@ More commonly, coding in another language means using translations of very popul
 
 The Online Historical Encyclopaedia of Programming Languages's website\footnote{\href{http://www.hopl.info/}{http://www.hopl.info/}. \last{May~3}} notes that the vast majority of languages were created in English speaking countries.\footnote{\href{http://www.hopl.info/countriesreportgr.prx}{http://www.hopl.info/countriesreportgr.prx}. \last{May~3}} For the most part, languages which are written in other languages do not have the same amount of reach or ecosystem size as languages developed in English. All of the top 15 languages on GitHub in 2017 were based on English.\footnote{\href{https://octoverse.github.com/}{https://octoverse.github.com/}. \last{May~3}}
 
-That English is needed to code means that any coder wishing to developer resources in their native language will most likely need to use English or other major languages for the vast majority of the work. While solving this problem is out of scope here, it is worth mentioning this aspect of language resource development. There is active work in this field, both for high and for low resource languages; for instance, Lassi\footnote{\href{https://github.com/julienmalard/Lassi}{https://github.com/julienmalard/Lassi}. \last{May~3}} is a tool in development which allows Kaqchikel speakers to code entirely in their own language, by automatically translating code from one language to another.
+That English is needed to code means that any coder wishing to developer resources in their native language will most likely need to use English or other major languages for the vast majority of the work. While solving this problem is out of scope here, it is worth mentioning this aspect of language resource development. There is active work in this field, both for high and for low resource languages; for instance, Lassi\footnote{\href{https://github.com/julienmalard/Lassi}{https://github.com/julienmalard/Lassi}. \last{May~3}} is a tool in development which allows Kaqchikel speakers to code entirely in their own language, by automatically translating code from one language to another. Any language could supported, so this is an exciting possible area of future work.
 
 % Note: I moved the entire section on ethics in open source to the Discussions chapter
